Address review feedback: <what changed>